--- a/src/Inceptum.AppServer.Configuration/Inceptum.AppServer.Configuration.csproj
+++ b/src/Inceptum.AppServer.Configuration/Inceptum.AppServer.Configuration.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationService.cs" />
     <Compile Include="Json\JsonContentProcessor.cs" />
     <Compile Include="Model\Bundle.cs" />
     <Compile Include="Model\BundleCollectionBase.cs" />
