--- a/src/Inceptum.AppServer/Inceptum.AppServer.csproj
+++ b/src/Inceptum.AppServer/Inceptum.AppServer.csproj
@@ -80,6 +80,10 @@
       <Project>{CDA6F8B1-546B-4D98-8B09-8297DB3CAD9F}</Project>
       <Name>Inceptum.AppServer.Configuration</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Inceptum.AppServer.ManagementConsole\Inceptum.AppServer.Management.csproj">
+      <Project>{7BC75E31-2A09-4E4B-8D3A-17828BCC8CC7}</Project>
+      <Name>Inceptum.AppServer.Management</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Inceptum.AppServer.Sdk\Inceptum.AppServer.Sdk.csproj">
       <Project>{CAFF34B8-90CD-46D6-BCE8-C7B275473346}</Project>
       <Name>Inceptum.AppServer.Sdk</Name>
