--- a/src/Inceptum.AppServer.ManagementConsole/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.ManagementConsole/Inceptum.AppServer.Management.csproj
@@ -76,6 +76,20 @@
     <EmbeddedResource Include="Views\Apps.cshtml" />
     <EmbeddedResource Include="Views\Conf.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Inceptum.AppServer.Sdk\Inceptum.AppServer.Sdk.csproj">
+      <Project>{CAFF34B8-90CD-46D6-BCE8-C7B275473346}</Project>
+      <Name>Inceptum.AppServer.Sdk</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\images\active.png" />
+    <EmbeddedResource Include="Content\images\failed.png" />
+    <EmbeddedResource Include="Content\images\inactive.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\images\pending.png" />
+  </ItemGroup>
   <Import Project="..\..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
