--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Configuration\IConfigurationService.cs" />
     <Compile Include="Configuration\SonicEndpoint.cs" />
     <Compile Include="Configuration\ValidationHelper.cs" />
+    <Compile Include="HostedAppInfo.cs" />
     <Compile Include="HostedApplicationAttribute.cs" />
+    <Compile Include="IHost.cs" />
     <Compile Include="IHostedApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
