--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -4,6 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
   <appSettings>
+    <add key="Environment" value="dev"/>
+    <add key="confSvcUrl" value="http://msa-ibdev1:8282"/>
+  </appSettings>
+  <!--<appSettings>
     <add key="Environment" value="dev" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
@@ -18,5 +22,5 @@
         <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
       </providers>
     </roleManager>
-  </system.web>
+  </system.web>-->
 </configuration>
