--- a/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{36FEFEBB-7E64-4539-8F4D-3FF44ADF92BC}</ProjectGuid>
+    <ProjectGuid>{7BC75E31-2A09-4E4B-8D3A-17828BCC8CC7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Inceptum.AppServer.Tests</RootNamespace>
-    <AssemblyName>Inceptum.AppServer.Tests</AssemblyName>
+    <RootNamespace>Inceptum.AppServer.Management</RootNamespace>
+    <AssemblyName>Inceptum.AppServer.Management</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,26 +40,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OpenWrapApplicationBrowserTests.cs" />
+    <Compile Include="Configurator.cs" />
+    <Compile Include="Handlers\AppsPageHandler.cs" />
+    <Compile Include="Handlers\ConfPageHandler.cs" />
+    <Compile Include="Handlers\EmbeddedContentHandler.cs" />
+    <Compile Include="HttpListenerHostWithConfiguration.cs" />
+    <Compile Include="ManagementConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\AppsPage.cs" />
+    <Compile Include="Resources\ConfPage.cs" />
+    <Compile Include="Resources\ContentFile.cs" />
+    <Compile Include="Resources\RootPage.cs" />
+    <Compile Include="Windsor\Constants.cs" />
+    <Compile Include="Windsor\ContextStoreLifetime.cs" />
+    <Compile Include="Windsor\Convert.cs" />
+    <Compile Include="Windsor\WindsorDependencyResolver.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Inceptum.AppServer.Configuration\Inceptum.AppServer.Configuration.csproj">
-      <Project>{CDA6F8B1-546B-4D98-8B09-8297DB3CAD9F}</Project>
-      <Name>Inceptum.AppServer.Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Inceptum.AppServer.Management\Inceptum.AppServer.Management.csproj">
-      <Project>{7BC75E31-2A09-4E4B-8D3A-17828BCC8CC7}</Project>
-      <Name>Inceptum.AppServer.Management</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="Content\css\reset.css" />
+    <EmbeddedResource Include="Content\css\site.css" />
+    <EmbeddedResource Include="Content\images\bg-input-focus.png" />
+    <EmbeddedResource Include="Content\images\bg-input.png" />
+    <EmbeddedResource Include="Content\images\logo.png" />
+    <EmbeddedResource Include="Content\js\jquery-1.6.2.min.js" />
+    <EmbeddedResource Include="Content\js\jquery-ui-1.8.14.min.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\Apps.cshtml" />
+    <EmbeddedResource Include="Views\Conf.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Inceptum.AppServer.Sdk\Inceptum.AppServer.Sdk.csproj">
       <Project>{CAFF34B8-90CD-46D6-BCE8-C7B275473346}</Project>
       <Name>Inceptum.AppServer.Sdk</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Inceptum.AppServer\Inceptum.AppServer.csproj">
-      <Project>{359FCF49-1498-4FDC-A212-E69522FBCCBF}</Project>
-      <Name>Inceptum.AppServer</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\images\active.png" />
+    <EmbeddedResource Include="Content\images\failed.png" />
+    <EmbeddedResource Include="Content\images\inactive.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\images\pending.png" />
   </ItemGroup>
   <Import Project="..\..\wraps\openwrap\build\OpenWrap.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
