log folder moved to current dir (used to be basedir)

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -6,7 +6,7 @@
     <add assembly="dbaces.core" />
   </extensions>
   
-  <variable name="logfolder" value="${basedir}\logs\${app_domain:DefaultAppDomainAlias=server}\" />
+  <variable name="logfolder" value=".\logs\${app_domain:DefaultAppDomainAlias=server}\" />
 
   <targets>
     <target name="asyncFileWriter" xsi:type="AsyncWrapper">
