--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppDomainInitializer.cs" />
     <Compile Include="AppInfo.cs" />
     <Compile Include="AppServerContext.cs" />
     <Compile Include="Configuration\ComponentRegistrationExtentions.cs" />
