improved app load performance; fixed bug in logging;

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -2,11 +2,8 @@
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   
-  <extensions>
-    <add assembly="dbaces.core" />
-  </extensions>
   
-  <variable name="logfolder" value=".\logs\${app_domain:DefaultAppDomainAlias=server}\" />
+  <variable name="logfolder" value="${basedir}\logs\${app_domain:DefaultAppDomainAlias=server}\" />
 
   <targets>
     <target name="asyncFileWriter" xsi:type="AsyncWrapper">
