Place configuration content log to separate file

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  
-  
   <variable name="logfolder" value="${basedir}\logs\${app_domain:DefaultAppDomainAlias=server}\" />
 
   <targets>
@@ -10,6 +8,10 @@
       <target name="logfile" xsi:type="File" autoFlush="true" fileName="${logfolder}\${shortdate}.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
     </target>
     
+	<target name="asyncConfigsFileWriter" xsi:type="AsyncWrapper">
+      <target name="logfile" xsi:type="File" autoFlush="true" fileName="${logfolder}\${shortdate}.configs.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+    </target>
+	
     <target name="asyncConsole" xsi:type="AsyncWrapper">
       <target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
     </target>
@@ -17,14 +19,14 @@
     <target name="asyncDebug" xsi:type="AsyncWrapper">
       <target name="debug" xsi:type="Debug" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
     </target>
-
-
+	
     <target name="null" xsi:type="Null" />
   </targets>
   
   <rules>
     <!-- <logger name="NHibernate.SQL" minlevel="Debug" writeTo="asyncFileWriter" final="true" />-->
     <logger name="NHibernate.*" writeTo="null" final="true" />
+	<logger name="*.LegacyRemoteConfigurationProvider" writeTo="asyncConfigsFileWriter" final="true" />
     <logger name="*" minlevel="Debug" writeTo="asyncFileWriter" />
     <logger name="*" minlevel="Debug" writeTo="asyncConsole" />
     <logger name="*" minlevel="Trace" writeTo="asyncDebug" />
