--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="Environment" value="dev"/>
-<!--    <add key="confSvcUrl" value="http://msa-ibdev1:8282"/>-->
+    <add key="confSvcUrl" value="http://msa-ibdev1:8282"/>
   </appSettings>
   <!--<appSettings>
     <add key="Environment" value="dev" />
