Disable logging for ExchangeRatesMultiplier vial nlog.config

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -26,6 +26,7 @@
   <rules>
     <!-- <logger name="NHibernate.SQL" minlevel="Debug" writeTo="asyncFileWriter" final="true" />-->
     <logger name="NHibernate.*" writeTo="null" final="true" />
+	<logger name="*.ExchangeRatesMultiplier" writeTo="null" final="true" />
 	<logger name="*.LegacyRemoteConfigurationProvider" writeTo="asyncConfigsFileWriter" final="true" />
     <logger name="*" minlevel="Debug" writeTo="asyncFileWriter" />
     <logger name="*" minlevel="Debug" writeTo="asyncConsole" />
