ServicesMonitor waits 15s for first HB before start

--- a/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
+++ b/src/Inceptum.AppServer.Tests/Inceptum.AppServer.Tests.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="OpenWrapApplicationBrowserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicesMonitorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Inceptum.AppServer.Configuration\Inceptum.AppServer.Configuration.csproj">
