--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -48,6 +48,7 @@
     <Compile Include="AppServerContext.cs" />
     <Compile Include="Configuration\BundleNotFoundException.cs" />
     <Compile Include="HostedAppStatus.cs" />
+    <Compile Include="IServerCore.cs" />
     <Compile Include="Monitoring\HostHbMessage.cs" />
     <Compile Include="Monitoring\InstanceInfo.cs" />
     <Compile Include="Monitoring\ServiceMonitor.cs" />
