--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -5,14 +5,14 @@
 
 	<targets>
 		<target name="asyncFileWriter" xsi:type="AsyncWrapper">
-			<target name="logfile" xsi:type="File" autoFlush="true" fileName="${logfolder}\${shortdate}.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 
 		<target name="asyncConfigsFileWriter" xsi:type="AsyncWrapper">
-			<target name="logfile" xsi:type="File" autoFlush="true" fileName="${logfolder}\${shortdate}.configs.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.configs.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 		<target name="asyncCardsFileWriter" xsi:type="AsyncWrapper">
-			<target name="logfile" xsi:type="File" autoFlush="true" fileName="${logfolder}\${shortdate}.cards.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.cards.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
 			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
@@ -30,16 +30,16 @@
 		<logger name="NHibernate.*" writeTo="null" final="true" />
 		<logger name="*.ExchangeRatesMultiplier" writeTo="null" final="true" />
 		<logger name="*.LegacyRemoteConfigurationProvider" writeTo="asyncConfigsFileWriter" final="true" />
-		<logger name="*.CardsListener" writeTo="asyncCardsFileWriter" final="true" >
+		<logger name="*.CardsListener" writeTo="asyncCardsFileWriter" final="false" >
 			<filters>
 				<when condition="level == LogLevel.Debug" action="LogFinal" />
-				<when condition="level != LogLevel.Debug" action="Ignore" />
+				<when condition="level != LogLevel.Debug" action="Log" />
 			</filters>
 		</logger>
-		<logger name="*.CardsAdapter" writeTo="asyncCardsFileWriter" final="true" >
+		<logger name="*.CardsAdapter" writeTo="asyncCardsFileWriter" final="false" >
 			<filters>
 				<when condition="level == LogLevel.Debug" action="LogFinal" />
-				<when condition="level != LogLevel.Debug" action="Ignore" />
+				<when condition="level != LogLevel.Debug" action="Log" />
 			</filters>
 		</logger>
 		<logger name="*" minlevel="Debug" writeTo="asyncFileWriter" />
