Add WithEndpoints extension

--- a/src/Inceptum.AppServer/nlog.config
+++ b/src/Inceptum.AppServer/nlog.config
@@ -14,6 +14,9 @@
 		<target name="asyncCardsFileWriter" xsi:type="AsyncWrapper">
 			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.cards.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
+		<target name="asyncDiasoftFileWriter" xsi:type="AsyncWrapper">
+			<target name="logfile" xsi:type="File" autoFlush="true" encoding="utf-8" fileName="${logfolder}\${shortdate}.diasoft.log" layout="${longdate} ${uppercase:inner=${pad:padCharacter= :padding=-5:inner=${level}}} [${threadid}][${threadname}] [${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+		</target>
 		<target name="asyncConsole" xsi:type="AsyncWrapper">
 			<target name="console" xsi:type="Console" layout="${date:format=HH\:mm\:ss.fff} [${threadid}][${threadname}] [${app_domain:DefaultAppDomainAlias=server}.${logger:shortName=true}] ${message} ${exception:format=tostring}" />
 		</target>
@@ -37,6 +40,18 @@
 			</filters>
 		</logger>
 		<logger name="*.CardsAdapter" writeTo="asyncCardsFileWriter" final="false" >
+			<filters>
+				<when condition="level == LogLevel.Debug" action="LogFinal" />
+				<when condition="level != LogLevel.Debug" action="Log" />
+			</filters>
+		</logger>
+		<logger name="*.DiasoftListener" writeTo="asyncDiasoftFileWriter" final="false" >
+			<filters>
+				<when condition="level == LogLevel.Debug" action="LogFinal" />
+				<when condition="level != LogLevel.Debug" action="Log" />
+			</filters>
+		</logger>
+		<logger name="*.DiasoftAdapter" writeTo="asyncDiasoftFileWriter" final="false" >
 			<filters>
 				<when condition="level == LogLevel.Debug" action="LogFinal" />
 				<when condition="level != LogLevel.Debug" action="Log" />
