default config points to new configuration url

--- a/src/Inceptum.AppServer/app.config
+++ b/src/Inceptum.AppServer/app.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="Environment" value="dev"/>
-    <add key="confSvcUrl" value="http://msa-ibdev1.office.finam.ru:8282"/>
+    <add key="confSvcUrl" value="http://msa-ibdev1.office.finam.ru:8282/configurations"/>
   </appSettings>
   <!--We need it for WebServices behind proxy to be accessed -->
   <system.net>
